@@ -13,6 +13,7 @@
     - Icon for blacksmith is missing the workpiece
     - Skip unnecessary Beer Factory rendering during game initialization
     - Endless buff after sacrifice (#106)
+    - Trading posts provide access to materials which aren't yet unlocked
     - Fixed some typos
 
 **1.68.0** - 16.03.2020
